# MultiThread_Renderer2

./: .gitignore  CMakeLists.txt  readme.md
assets/: uPref.ini
include/: AT.h  FKpreferences.h  INIT.h  INST.h  TSRPrimitives.h  _MTR.h  _TSR.h  audio.h  button.h  defaults.h  fkenum.h  fkore.h  funtimes.h  identifier.h  information.h  input.h  preferences.h  primitives.h  renderUpdates.h  renderable.h  renderables.h  rendering.h  surfaces.h  threading.h  utility.h  window.h
include/components/: buffer.h  image.h  layer.h  renderable.h  spriteGroup.h  superGroup.h  text.h
include/old/: oldrenderUpdates.h  rendering.h
src/: AT.cpp  FKpreferences.cpp  INST.cpp  RND.cpp  buffer.cpp  init.cpp  main.cpp  preferences.cpp  rendering.cpp  sprite.cpp  window.cpp
src/audio/: initAudio.cpp  loadWav.cpp
src/input/: initKeyBinds.cpp  keyActions.cpp  pollEvents.cpp  scancodes.cpp
src/rendering/: renderable.cpp  rendering.cpp  sprite.cpp  ttfText.cpp  window.cpp
src/rendering/FKORE/: rendering.cpp  window.cpp
src/rendering/Renderable/: renderable.cpp  sprite.cpp  ttfText.cpp
